--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -1,5 +1,32 @@
 <div class="background-video-container">
-  <div id="background-video-player" class="__video"></div>
+  <div id="background-video-player">
+    <div
+      id="background-video-player-smooth"
+      class="__video --smooth"
+      data-video-name="smooth"
+    ></div>
+    <div
+      id="background-video-player-choppy"
+      class="__video --choppy"
+      data-video-name="choppy"
+    ></div>
+    <div
+      id="background-video-player-rough"
+      class="__video --rough"
+      data-video-name="rough"
+    ></div>
+    <div
+      id="background-video-player-flowing"
+      class="__video --flowing"
+      data-video-name="flowing"
+    ></div>
+    <div
+      id="background-video-player-creek"
+      class="__video --creek"
+      data-video-name="creek"
+    ></div>
+  </div>
+
   <!-- <div class="__line-drawing">{% include matt_sample_drawing.svg %}</div> -->
   <div class="__overlay"></div>
 </div>
