--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -117,6 +117,9 @@ body {
   }
 
   .__video {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
     object-fit: cover;
