Use trimmed video ids

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -369,7 +369,7 @@ body {
 html[data-section="home-privacy-platform"] {
   .background-video-container {
     .__video {
-      filter: grayscale(1);
+      // filter: grayscale(1);
     }
 
     .__overlay {
@@ -430,7 +430,7 @@ html[data-section="home-river-gives-you-control"] {
 
   .background-video-container {
     .__video {
-      filter: grayscale(1);
+      // filter: grayscale(1);
     }
 
     .__overlay {
@@ -461,7 +461,7 @@ html[data-section="home-who-owns-your-data"] {
 
   .background-video-container {
     .__video {
-      filter: grayscale(1);
+      // filter: grayscale(1);
     }
 
     .__overlay {
@@ -492,7 +492,7 @@ html[data-section="home-who-is-using-your-data"] {
 
   .background-video-container {
     .__video {
-      filter: grayscale(1);
+      // filter: grayscale(1);
     }
 
     .__overlay {
@@ -523,7 +523,7 @@ html[data-section="home-who-is-using-your-data-2"] {
 
   .background-video-container {
     .__video {
-      filter: grayscale(1);
+      // filter: grayscale(1);
     }
 
     .__overlay {
@@ -565,7 +565,7 @@ html[data-section="home-how-does-river-work"] {
 
   .background-video-container {
     .__video {
-      filter: grayscale(1);
+      // filter: grayscale(1);
     }
 
     .__overlay {
@@ -596,7 +596,7 @@ html[data-section="home-business-of-data"] {
 
   .background-video-container {
     .__video {
-      filter: grayscale(1);
+      // filter: grayscale(1);
     }
 
     .__overlay {
