More random updates

--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,6 +1,10 @@
 :root {
   --blue-dark: #0f2b4d;
+  --blue-background: #0e2b68;
   --gray-dark: #3f3f3f;
+  --gray-beast: #666666;
+  --gray-medium: #999999;
+  --gray-light: #b2b2b2;
   --yellow: #edfb8b;
   --green: #68cf6d;
   --orange: #e16e36;
