Move gradients inside video containers.

--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -1,32 +1,31 @@
 <div class="background-video-container">
   <div id="background-video-player">
-    <div
-      id="background-video-player-smooth"
-      class="__video --smooth"
-      data-video-name="smooth"
-    ></div>
-    <div
-      id="background-video-player-choppy"
-      class="__video --choppy"
-      data-video-name="choppy"
-    ></div>
-    <div
-      id="background-video-player-rough"
-      class="__video --rough"
-      data-video-name="rough"
-    ></div>
-    <div
-      id="background-video-player-flowing"
-      class="__video --flowing"
-      data-video-name="flowing"
-    ></div>
-    <div
-      id="background-video-player-creek"
-      class="__video --creek"
-      data-video-name="creek"
-    ></div>
+    <div class="__video --smooth" data-video-name="smooth">
+      <div id="background-video-player-smooth"></div>
+      <div class="__overlay --white-fade"></div>
+    </div>
+
+    <div class="__video --choppy" data-video-name="choppy">
+      <div id="background-video-player-choppy"></div>
+      <div class="__overlay --blue-blue-2"></div>
+    </div>
+
+    <div class="__video --rough" data-video-name="rough">
+      <div id="background-video-player-rough"></div>
+      <div class="__overlay --feathered-gray-blue"></div>
+    </div>
+
+    <div class="__video --flowing" data-video-name="flowing">
+      <div id="background-video-player-flowing"></div>
+      <div class="__overlay --gray-blue"></div>
+      <div class="__overlay --blue-blue"></div>
+    </div>
+
+    <div class="__video --creek" data-video-name="creek">
+      <div id="background-video-player-creek"></div>
+      <div class="__overlay --blue-blue-2"></div>
+    </div>
   </div>
 
   <!-- <div class="__line-drawing">{% include matt_sample_drawing.svg %}</div> -->
-  <div class="__overlay"></div>
 </div>
