--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -5,14 +5,16 @@
       <div class="__overlay --white-fade"></div>
     </div>
 
-    <div class="__video --choppy" data-video-name="choppy">
+    <!-- <div class="__video --choppy" data-video-name="choppy">
       <div id="background-video-player-choppy"></div>
       <div class="__overlay --blue-blue-2"></div>
-    </div>
+    </div> -->
 
     <div class="__video --rough" data-video-name="rough">
       <div id="background-video-player-rough"></div>
       <div class="__overlay --feathered-gray-blue"></div>
+      <div class="__overlay --dark-blue"></div>
+      <div class="__overlay --dark-blue-inv"></div>
     </div>
 
     <div class="__video --flowing" data-video-name="flowing">
@@ -23,7 +25,7 @@
 
     <div class="__video --creek" data-video-name="creek">
       <div id="background-video-player-creek"></div>
-      <div class="__overlay --blue-blue-2"></div>
+      <div class="__overlay --creek"></div>
     </div>
   </div>
 
