--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,8 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css" />
     <script src="https://player.vimeo.com/api/player.js"></script>
-    <script
-      type="text/javascript"
-      src="{{ site.baseurl }}/assets/js/river.js"
-    ></script>
+    <script src="{{ site.baseurl }}/assets/js/typed.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/river.js"></script>
   </head>
   <body>
     {% include background_video.html %} {% include header.html %}
