--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -5,11 +5,6 @@
       <div class="__overlay --white-fade"></div>
     </div>
 
-    <!-- <div class="__video --choppy" data-video-name="choppy">
-      <div id="background-video-player-choppy"></div>
-      <div class="__overlay --blue-blue-2"></div>
-    </div> -->
-
     <div class="__video --rough" data-video-name="rough">
       <div id="background-video-player-rough"></div>
       <div class="__overlay --feathered-gray-blue"></div>
@@ -29,5 +24,7 @@
     </div>
   </div>
 
-  <!-- <div class="__line-drawing">{% include matt_sample_drawing.svg %}</div> -->
+  <div class="__line-drawing svg-line-drawing">
+    {% include nikki_line_drawing.svg %}
+  </div>
 </div>
