--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css" />
     <script src="https://player.vimeo.com/api/player.js"></script>
     <script src="{{ site.baseurl }}/assets/js/typed.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/sections.js"></script>
     <script src="{{ site.baseurl }}/assets/js/river.js"></script>
   </head>
   <body>
