--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -25,6 +25,6 @@
   </div>
 
   <div class="__line-drawing svg-line-drawing">
-    <!-- include nikki_line_drawing.svg -->
+    {% include nikki_line_drawing.svg %}
   </div>
 </div>
